[package]
name = "csv_import_general"
version = "0.1.0"
authors = ["yukimakura <yukimakura86@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="1.1.2"
serde = { version = "1.0", features = ["derive"] }
